update : file updated

--- a/major_project.ipynb
+++ b/major_project.ipynb
@@ -4,16 +4,17 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Import Packages"
+    "#### 1.Import Packages"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [],
    "source": [
     "import mediapipe as mp\n",
+    "import numpy as np\n",
     "import time\n",
     "from matplotlib import pyplot as plt\n",
     "import cv2\n",
@@ -24,12 +25,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Keypoints using MP Holistic"
+    "#### 2.Keypoints using MP Holistic"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -54,182 +55,51 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<class 'mediapipe.python.solution_base.SolutionOutputs'>\n",
-      "<class 'mediapipe.python.solution_base.SolutionOutputs'>\n",
-      "<class 'mediapipe.python.solution_base.SolutionOutputs'>\n",
-      "<class 'mediapipe.python.solution_base.SolutionOutputs'>\n",
-      "<class 'mediapipe.python.solution_base.SolutionOutputs'>\n",
-      "<class 'mediapipe.python.solution_base.SolutionOutputs'>\n",
-      "<class 'mediapipe.python.solution_base.SolutionOutputs'>\n",
-      "<class 'mediapipe.python.solution_base.SolutionOutputs'>\n",
-      "<class 'mediapipe.python.solution_base.SolutionOutputs'>\n",
-      "<class 'mediapipe.python.solution_base.SolutionOutputs'>\n",
-      "<class 'mediapipe.python.solution_base.SolutionOutputs'>\n",
-      "<class 'mediapipe.python.solution_base.SolutionOutputs'>\n",
-      "<class 'mediapipe.python.solution_base.SolutionOutputs'>\n",
-      "<class 'mediapipe.python.solution_base.SolutionOutputs'>\n",
-      "<class 'mediapipe.python.solution_base.SolutionOutputs'>\n",
-      "<class 'mediapipe.python.solution_base.SolutionOutputs'>\n",
-      "<class 'mediapipe.python.solution_base.SolutionOutputs'>\n",
-      "<class 'mediapipe.python.solution_base.SolutionOutputs'>\n",
-      "<class 'mediapipe.python.solution_base.SolutionOutputs'>\n",
-      "<class 'mediapipe.python.solution_base.SolutionOutputs'>\n",
-      "<class 'mediapipe.python.solution_base.SolutionOutputs'>\n",
-      "<class 'mediapipe.python.solution_base.SolutionOutputs'>\n",
-      "<class 'mediapipe.python.solution_base.SolutionOutputs'>\n",
-      "<class 'mediapipe.python.solution_base.SolutionOutputs'>\n",
-      "<class 'mediapipe.python.solution_base.SolutionOutputs'>\n",
-      "<class 'mediapipe.python.solution_base.SolutionOutputs'>\n",
-      "<class 'mediapipe.python.solution_base.SolutionOutputs'>\n",
-      "<class 'mediapipe.python.solution_base.SolutionOutputs'>\n",
-      "<class 'mediapipe.python.solution_base.SolutionOutputs'>\n",
-      "<class 'mediapipe.python.solution_base.SolutionOutputs'>\n",
-      "<class 'mediapipe.python.solution_base.SolutionOutputs'>\n",
-      "<class 'mediapipe.python.solution_base.SolutionOutputs'>\n",
-      "<class 'mediapipe.python.solution_base.SolutionOutputs'>\n",
-      "<class 'mediapipe.python.solution_base.SolutionOutputs'>\n",
-      "<class 'mediapipe.python.solution_base.SolutionOutputs'>\n",
-      "<class 'mediapipe.python.solution_base.SolutionOutputs'>\n",
-      "<class 'mediapipe.python.solution_base.SolutionOutputs'>\n",
-      "<class 'mediapipe.python.solution_base.SolutionOutputs'>\n",
-      "<class 'mediapipe.python.solution_base.SolutionOutputs'>\n",
-      "<class 'mediapipe.python.solution_base.SolutionOutputs'>\n",
-      "<class 'mediapipe.python.solution_base.SolutionOutputs'>\n",
-      "<class 'mediapipe.python.solution_base.SolutionOutputs'>\n",
-      "<class 'mediapipe.python.solution_base.SolutionOutputs'>\n",
-      "<class 'mediapipe.python.solution_base.SolutionOutputs'>\n",
-      "<class 'mediapipe.python.solution_base.SolutionOutputs'>\n",
-      "<class 'mediapipe.python.solution_base.SolutionOutputs'>\n",
-      "<class 'mediapipe.python.solution_base.SolutionOutputs'>\n",
-      "<class 'mediapipe.python.solution_base.SolutionOutputs'>\n",
-      "<class 'mediapipe.python.solution_base.SolutionOutputs'>\n",
-      "<class 'mediapipe.python.solution_base.SolutionOutputs'>\n",
-      "<class 'mediapipe.python.solution_base.SolutionOutputs'>\n",
-      "<class 'mediapipe.python.solution_base.SolutionOutputs'>\n",
-      "<class 'mediapipe.python.solution_base.SolutionOutputs'>\n",
-      "<class 'mediapipe.python.solution_base.SolutionOutputs'>\n",
-      "<class 'mediapipe.python.solution_base.SolutionOutputs'>\n",
-      "<class 'mediapipe.python.solution_base.SolutionOutputs'>\n",
-      "<class 'mediapipe.python.solution_base.SolutionOutputs'>\n",
-      "<class 'mediapipe.python.solution_base.SolutionOutputs'>\n",
-      "<class 'mediapipe.python.solution_base.SolutionOutputs'>\n",
-      "<class 'mediapipe.python.solution_base.SolutionOutputs'>\n",
-      "<class 'mediapipe.python.solution_base.SolutionOutputs'>\n",
-      "<class 'mediapipe.python.solution_base.SolutionOutputs'>\n",
-      "<class 'mediapipe.python.solution_base.SolutionOutputs'>\n",
-      "<class 'mediapipe.python.solution_base.SolutionOutputs'>\n",
-      "<class 'mediapipe.python.solution_base.SolutionOutputs'>\n",
-      "<class 'mediapipe.python.solution_base.SolutionOutputs'>\n",
-      "<class 'mediapipe.python.solution_base.SolutionOutputs'>\n",
-      "<class 'mediapipe.python.solution_base.SolutionOutputs'>\n",
-      "<class 'mediapipe.python.solution_base.SolutionOutputs'>\n",
-      "<class 'mediapipe.python.solution_base.SolutionOutputs'>\n",
-      "<class 'mediapipe.python.solution_base.SolutionOutputs'>\n",
-      "<class 'mediapipe.python.solution_base.SolutionOutputs'>\n",
-      "<class 'mediapipe.python.solution_base.SolutionOutputs'>\n",
-      "<class 'mediapipe.python.solution_base.SolutionOutputs'>\n",
-      "<class 'mediapipe.python.solution_base.SolutionOutputs'>\n",
-      "<class 'mediapipe.python.solution_base.SolutionOutputs'>\n",
-      "<class 'mediapipe.python.solution_base.SolutionOutputs'>\n",
-      "<class 'mediapipe.python.solution_base.SolutionOutputs'>\n",
-      "<class 'mediapipe.python.solution_base.SolutionOutputs'>\n",
-      "<class 'mediapipe.python.solution_base.SolutionOutputs'>\n",
-      "<class 'mediapipe.python.solution_base.SolutionOutputs'>\n",
-      "<class 'mediapipe.python.solution_base.SolutionOutputs'>\n",
-      "<class 'mediapipe.python.solution_base.SolutionOutputs'>\n",
-      "<class 'mediapipe.python.solution_base.SolutionOutputs'>\n",
-      "<class 'mediapipe.python.solution_base.SolutionOutputs'>\n",
-      "<class 'mediapipe.python.solution_base.SolutionOutputs'>\n",
-      "<class 'mediapipe.python.solution_base.SolutionOutputs'>\n",
-      "<class 'mediapipe.python.solution_base.SolutionOutputs'>\n",
-      "<class 'mediapipe.python.solution_base.SolutionOutputs'>\n",
-      "<class 'mediapipe.python.solution_base.SolutionOutputs'>\n",
-      "<class 'mediapipe.python.solution_base.SolutionOutputs'>\n",
-      "<class 'mediapipe.python.solution_base.SolutionOutputs'>\n",
-      "<class 'mediapipe.python.solution_base.SolutionOutputs'>\n",
-      "<class 'mediapipe.python.solution_base.SolutionOutputs'>\n",
-      "<class 'mediapipe.python.solution_base.SolutionOutputs'>\n",
-      "<class 'mediapipe.python.solution_base.SolutionOutputs'>\n",
-      "<class 'mediapipe.python.solution_base.SolutionOutputs'>\n",
-      "<class 'mediapipe.python.solution_base.SolutionOutputs'>\n",
-      "<class 'mediapipe.python.solution_base.SolutionOutputs'>\n",
-      "<class 'mediapipe.python.solution_base.SolutionOutputs'>\n",
-      "<class 'mediapipe.python.solution_base.SolutionOutputs'>\n",
-      "<class 'mediapipe.python.solution_base.SolutionOutputs'>\n",
-      "<class 'mediapipe.python.solution_base.SolutionOutputs'>\n",
-      "<class 'mediapipe.python.solution_base.SolutionOutputs'>\n",
-      "<class 'mediapipe.python.solution_base.SolutionOutputs'>\n",
-      "<class 'mediapipe.python.solution_base.SolutionOutputs'>\n",
-      "<class 'mediapipe.python.solution_base.SolutionOutputs'>\n",
-      "<class 'mediapipe.python.solution_base.SolutionOutputs'>\n",
-      "<class 'mediapipe.python.solution_base.SolutionOutputs'>\n",
-      "<class 'mediapipe.python.solution_base.SolutionOutputs'>\n",
-      "<class 'mediapipe.python.solution_base.SolutionOutputs'>\n",
-      "<class 'mediapipe.python.solution_base.SolutionOutputs'>\n",
-      "<class 'mediapipe.python.solution_base.SolutionOutputs'>\n",
-      "<class 'mediapipe.python.solution_base.SolutionOutputs'>\n",
-      "<class 'mediapipe.python.solution_base.SolutionOutputs'>\n",
-      "<class 'mediapipe.python.solution_base.SolutionOutputs'>\n",
-      "<class 'mediapipe.python.solution_base.SolutionOutputs'>\n",
-      "<class 'mediapipe.python.solution_base.SolutionOutputs'>\n",
-      "<class 'mediapipe.python.solution_base.SolutionOutputs'>\n",
-      "<class 'mediapipe.python.solution_base.SolutionOutputs'>\n",
-      "<class 'mediapipe.python.solution_base.SolutionOutputs'>\n",
-      "<class 'mediapipe.python.solution_base.SolutionOutputs'>\n",
-      "<class 'mediapipe.python.solution_base.SolutionOutputs'>\n",
-      "<class 'mediapipe.python.solution_base.SolutionOutputs'>\n",
-      "<class 'mediapipe.python.solution_base.SolutionOutputs'>\n",
-      "<class 'mediapipe.python.solution_base.SolutionOutputs'>\n",
-      "<class 'mediapipe.python.solution_base.SolutionOutputs'>\n",
-      "<class 'mediapipe.python.solution_base.SolutionOutputs'>\n",
-      "<class 'mediapipe.python.solution_base.SolutionOutputs'>\n",
-      "<class 'mediapipe.python.solution_base.SolutionOutputs'>\n",
-      "<class 'mediapipe.python.solution_base.SolutionOutputs'>\n",
-      "<class 'mediapipe.python.solution_base.SolutionOutputs'>\n",
-      "<class 'mediapipe.python.solution_base.SolutionOutputs'>\n",
-      "<class 'mediapipe.python.solution_base.SolutionOutputs'>\n",
-      "<class 'mediapipe.python.solution_base.SolutionOutputs'>\n",
-      "<class 'mediapipe.python.solution_base.SolutionOutputs'>\n",
-      "<class 'mediapipe.python.solution_base.SolutionOutputs'>\n",
-      "<class 'mediapipe.python.solution_base.SolutionOutputs'>\n",
-      "<class 'mediapipe.python.solution_base.SolutionOutputs'>\n",
-      "<class 'mediapipe.python.solution_base.SolutionOutputs'>\n",
-      "<class 'mediapipe.python.solution_base.SolutionOutputs'>\n",
-      "<class 'mediapipe.python.solution_base.SolutionOutputs'>\n",
-      "<class 'mediapipe.python.solution_base.SolutionOutputs'>\n",
-      "<class 'mediapipe.python.solution_base.SolutionOutputs'>\n",
-      "<class 'mediapipe.python.solution_base.SolutionOutputs'>\n",
-      "<class 'mediapipe.python.solution_base.SolutionOutputs'>\n",
-      "<class 'mediapipe.python.solution_base.SolutionOutputs'>\n",
-      "<class 'mediapipe.python.solution_base.SolutionOutputs'>\n",
-      "<class 'mediapipe.python.solution_base.SolutionOutputs'>\n",
-      "<class 'mediapipe.python.solution_base.SolutionOutputs'>\n",
-      "<class 'mediapipe.python.solution_base.SolutionOutputs'>\n",
-      "<class 'mediapipe.python.solution_base.SolutionOutputs'>\n",
-      "<class 'mediapipe.python.solution_base.SolutionOutputs'>\n",
-      "<class 'mediapipe.python.solution_base.SolutionOutputs'>\n",
-      "<class 'mediapipe.python.solution_base.SolutionOutputs'>\n",
-      "<class 'mediapipe.python.solution_base.SolutionOutputs'>\n",
-      "<class 'mediapipe.python.solution_base.SolutionOutputs'>\n",
-      "<class 'mediapipe.python.solution_base.SolutionOutputs'>\n",
-      "<class 'mediapipe.python.solution_base.SolutionOutputs'>\n",
-      "<class 'mediapipe.python.solution_base.SolutionOutputs'>\n",
-      "<class 'mediapipe.python.solution_base.SolutionOutputs'>\n",
-      "<class 'mediapipe.python.solution_base.SolutionOutputs'>\n",
-      "<class 'mediapipe.python.solution_base.SolutionOutputs'>\n",
-      "<class 'mediapipe.python.solution_base.SolutionOutputs'>\n",
-      "<class 'mediapipe.python.solution_base.SolutionOutputs'>\n",
-      "<class 'mediapipe.python.solution_base.SolutionOutputs'>\n"
-     ]
-    }
-   ],
+   "outputs": [],
+   "source": [
+    "def draw_landmarks(image, results):\n",
+    "    mp_drawing.draw_landmarks(image, results.face_landmarks, mp_holistic.FACEMESH_CONTOURS) # Draw face connections\n",
+    "    mp_drawing.draw_landmarks(image, results.pose_landmarks, mp_holistic.POSE_CONNECTIONS) # Draw pose connections\n",
+    "    mp_drawing.draw_landmarks(image, results.left_hand_landmarks, mp_holistic.HAND_CONNECTIONS) # Draw left hand connections\n",
+    "    mp_drawing.draw_landmarks(image, results.right_hand_landmarks, mp_holistic.HAND_CONNECTIONS) # Draw right hand connec"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def draw_styled_landmarks(image, results):\n",
+    "    # Draw face connections\n",
+    "    mp_drawing.draw_landmarks(image, results.face_landmarks, mp_holistic.FACEMESH_CONTOURS, \n",
+    "                             mp_drawing.DrawingSpec(color=(51,204,51), thickness=0, circle_radius=1), \n",
+    "                             mp_drawing.DrawingSpec(color=(102,255,255), thickness=1, circle_radius=1)\n",
+    "                             ) \n",
+    "    # Draw pose connections\n",
+    "    mp_drawing.draw_landmarks(image, results.pose_landmarks, mp_holistic.POSE_CONNECTIONS,\n",
+    "                             mp_drawing.DrawingSpec(color=(153,102,102), thickness=2, circle_radius=4), \n",
+    "                             mp_drawing.DrawingSpec(color=(80,44,121), thickness=2, circle_radius=2)\n",
+    "                             ) \n",
+    "    # Draw left hand connections\n",
+    "    mp_drawing.draw_landmarks(image, results.left_hand_landmarks, mp_holistic.HAND_CONNECTIONS, \n",
+    "                             mp_drawing.DrawingSpec(color=(255,153,0), thickness=2, circle_radius=4), \n",
+    "                             mp_drawing.DrawingSpec(color=(121,44,250), thickness=2, circle_radius=2)\n",
+    "                             ) \n",
+    "    # Draw right hand connections  \n",
+    "    mp_drawing.draw_landmarks(image, results.right_hand_landmarks, mp_holistic.HAND_CONNECTIONS, \n",
+    "                             mp_drawing.DrawingSpec(color=(255,153,0), thickness=2, circle_radius=4), \n",
+    "                             mp_drawing.DrawingSpec(color=(245,66,230), thickness=2, circle_radius=2)\n",
+    "                             ) "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "cap = cv2.VideoCapture(0)\n",
     "with mp_holistic.Holistic(min_detection_confidence=0.5, min_tracking_confidence=0.5) as holistic:\n",
@@ -242,8 +112,11 @@
     "        image, results = mediapipe_detection(frame, holistic)\n",
     "        print(results)\n",
     "\n",
+    "        #Draw Landmarks\n",
+    "        draw_styled_landmarks(image, results)\n",
+    "\n",
     "        #Show to screen\n",
-    "        cv2.imshow('Potato Feed', frame)\n",
+    "        cv2.imshow('Potato Feed', image)\n",
     "\n",
     "        #Break nicely\n",
     "        if cv2.waitKey(10) & 0xFF == ord('q'):\n",
@@ -251,6 +124,82 @@
     "\n",
     "cap.release()\n",
     "cv2.destroyAllWindows()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 3.Extract Keypoint Values"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pose = []\n",
+    "for res in results.pose_landmarks.landmark:\n",
+    "    test = np.array([res.x, res.y, res.z, res.visibility])\n",
+    "    pose.append(test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def extract_keypoints(results):\n",
+    "    pose = np.array([[res.x, res.y, res.z, res.visibility] for res in results.pose_landmarks.landmark]).flatten() if results.pose_landmarks else np.zeros(132)\n",
+    "    face = np.array([[res.x, res.y, res.z] for res in results.face_landmarks.landmark]).flatten() if results.face_landmarks else np.zeros(1404)\n",
+    "    lh = np.array([[res.x, res.y, res.z] for res in results.left_hand_landmarks.landmark]).flatten() if results.left_hand_landmarks else np.zeros(21*3)\n",
+    "    rh = np.array([[res.x, res.y, res.z] for res in results.right_hand_landmarks.landmark]).flatten() if results.right_hand_landmarks else np.zeros(21*3)\n",
+    "    return np.concatenate([pose, face, lh, rh])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 4.Creating Folders for Collection"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 68,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Path for exported data, numpy arrays\n",
+    "DATA_PATH = os.path.join('MP_Data') \n",
+    "\n",
+    "# Actions that we try to detect\n",
+    "actions = np.array(['hello', 'thanks', 'iloveyou'])\n",
+    "\n",
+    "# Thirty videos worth of data\n",
+    "no_sequences = 30\n",
+    "\n",
+    "# Videos are going to be 30 frames in length\n",
+    "sequence_length = 30\n",
+    "\n",
+    "# Folder start\n",
+    "start_folder = 30"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 69,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for action in actions: \n",
+    "    for sequence in range(1,no_sequences+1):\n",
+    "        try: \n",
+    "            os.makedirs(os.path.join(DATA_PATH, action, str(sequence)))\n",
+    "        except:\n",
+    "            pass"
    ]
   }
  ],
